--- a/assets/css/templatemo-digimedia-v1.css
+++ b/assets/css/templatemo-digimedia-v1.css
@@ -781,6 +781,12 @@ header
   background-color: rgba(114, 106, 227, 0.2);
 }
 
+.logo img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
 @media (max-width: 768px) {
   .training-calendar {
       font-size: 0.9rem;
