--- a/assets/css/templatemo-digimedia-v1.css
+++ b/assets/css/templatemo-digimedia-v1.css
@@ -753,12 +753,13 @@ header
   background-color: #fa65b1;
   color: white;
   text-align: center;
-  font-size: 1.25rem;
+  font-size: 15px;
   padding: 15px;
 }
 
 .training-calendar thead tr:nth-child(2) th {
   text-align: center;
+  font-size: 15px;
   vertical-align: middle;
   background-color: #726ae3;
   color: white;
@@ -766,6 +767,7 @@ header
 
 .training-calendar tbody td {
   text-align: center;
+  font-size: 15px;
   vertical-align: middle;
   word-wrap: break-word;
   max-width: 200px;
@@ -1119,7 +1121,7 @@ About Style
 */
 
 #about {
-  padding-top: 130px;
+  padding-top: 10px;
 }
 
 .about-left-image img {
@@ -1545,6 +1547,15 @@ Services Style
   margin-bottom: 20px;
   font-size: 15px;
   font-weight: 400;
+}
+
+.keywords {
+  color: #fa65b1 !important;
+  font-weight: 700;
+}
+
+.icon img {
+  border-radius: 50%;
 }
 
 
