--- a/assets/css/templatemo-digimedia-v1.css
+++ b/assets/css/templatemo-digimedia-v1.css
@@ -135,6 +135,11 @@ img {
   overflow: hidden;
 }
 
+.company-logo {
+  width: 65px;
+  height: 65px;
+}
+
 /* 
 ---------------------------------------------
 global styles
@@ -735,6 +740,11 @@ header
 
 .header-area.header-sticky .nav li a.active {
   color: #fa65b1;
+}
+
+#schedule{
+  position: relative;
+  z-index: 100 !important;
 }
 
 .training-calendar {
@@ -1451,10 +1461,11 @@ Services Style
   margin-bottom: 30px;
 }
 
+
 .services .naccs .menu div {
   color: #2a2a2a;
   margin: 0px;
-  width: 15%;
+  width: 18%;
   font-size: 20px;
   font-weight: 700;
   display: inline-block;
@@ -1465,15 +1476,29 @@ Services Style
   transition: 1s all cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
+.first-thumb {
+  margin-right: 1rem !important;
+}
+
+.second-thumb {
+  margin-right: 1rem !important;
+}
+
+.third-thumb {
+  margin-right: 1rem !important;
+}
+
 .services .naccs .menu div .thumb {
   display: inline-block;
   width: 100%;
   padding: 30px 0px;
   background-color: #fff;
+  margin-right: 1rem !important;
 }
 
 .services .naccs .menu div.active {
-  box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 15px #fa65b1;
+  background-color: #fa65b1 !important
 }
 
 .services ul.nacc {
